contrast correction

--- a/main.css
+++ b/main.css
@@ -50,6 +50,10 @@ p {
     padding-left: 5%;
     padding-right: 5%;
     margin: auto;   
+    color: white;
+}
+.footer p {
+    color: black;
 }
 
 .container {
@@ -68,15 +72,18 @@ h1 {
     font-family: cursive; 
     margin-left: 30px;
     margin-top: 30px;
+    color: white;
 }
 
 h2 {
     text-align: center;
+    color: white;
 }
 
 h3 {
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: white;
 }
 
 .headshot {
@@ -89,7 +96,7 @@ h3 {
 .button {
     background-color: grey;
     border: none;
-    color: white;
+    color: black;
     padding: 5px 10px;
     text-align: center;
     text-decoration: none;
